@@ -23,7 +23,7 @@
 ### END INIT INFO
 ###############################################################################
 
-unset DESC DAEMON DAEMON_ARGS CONFIG PIDFILE NICE USER SIGHUP_RELOAD
+unset DESC DAEMON CONFIG DAEMON_ARGS PIDFILE NICE USER SIGHUP_RELOAD
 
 prefix="@prefix@"
 exec_prefix="@exec_prefix@"
@@ -33,8 +33,8 @@ localstatedir="@localstatedir@"
 
 DESC="MUNGE"
 DAEMON="$sbindir/munged"
-#DAEMON_ARGS=
 #CONFIG=#_NOT_SUPPORTED_#
+#DAEMON_ARGS=
 PIDFILE="$localstatedir/run/munge/munged.pid"
 #NICE=
 USER="daemon"
@@ -56,7 +56,7 @@ service_init ()
   STATUS=0
 
   # Read configuration defaults to override variables:
-  #   $DAEMON_ARGS, $CONFIG, $PIDFILE, $USER, $NICE, $SIGHUP_RELOAD
+  #   $CONFIG, $DAEMON_ARGS, $PIDFILE, $USER, $NICE, $SIGHUP_RELOAD
   ##
   for dir in "$sysconfdir/default" "$sysconfdir/sysconfig"; do
     [ -r "$dir/$SCRIPT_NAME" ] && . "$dir/$SCRIPT_NAME"
