@@ -1,3 +1,7 @@
+2009-04-23  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/etc/munge.init.in: Swapped order of CONFIG & DAEMON_ARGS vars.
+
 2009-04-06  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/etc/munge.init.in: Changed LSB Default-Start / Default-Stop and
